--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
           submodules: recursive
 
       - name: Install dependencies
-        run: brew install autoconf
+        run: brew install automake
 
       - name: Build
         run: python3 build.py
@@ -25,6 +25,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: Install dependencies
+        run: apt install automake
 
       - name: Build
         run: python3 build.py
