Add sudo to apt-get install in build.yml.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           submodules: recursive
 
       - name: Install dependencies
-        run: apt install automake
+        run: sudo apt-get -y install automake
 
       - name: Build
         run: python3 build.py
