--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ jobs:
       # build.py requires MSYS2
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            automake
 
       # build.py requires msbuild
       - name: Add msbuild to PATH
