--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           update: true
           install: >-
+            autoconf
             automake
 
       # build.py requires msbuild
